# turo

./: Cargo.toml  Makefile  README.md  limine.cfg  turo
examples/: example1.tr  example2.tr
kernel/: Makefile
src/: err_handler.c  err_handler.h  handle_args.c  interface.c  lex.c  lex.h  lib.rs  symboltable.c  symboltable.h  test.c  token.h  turo.c  turo.h
src/arch/x86_64/: long_mode_init.asm
turo/: .gdbinit  Makefile  TODO.md  limine.cfg
turo/kernel/: .gitignore  Cargo.toml  Makefile
turo/kernel/.cargo/: config.toml
turo/kernel/src/: lib.rs  logging.rs  main.rs  serial.rs  testing.rs  vga_buffer.rs
turo/kernel/src/arch/x86_64/: gdt.rs  io.rs  mod.rs  serial.rs
turo/kernel/src/drivers/: uart_16550.rs
turo/kernel/tests/: basic_boot.rs
turo/turo/: Cargo.toml  Makefile
turo/turo/scripts/: test_runner.sh
turo/turo/src/: main.rs  testing.rs
turo/turo/src/arch/x86_64/: gdt.rs  mod.rs  serial.rs  tss.rs
turo/turo/src/util/: logger.rs
