[package]
name = "turo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Bootloader
[dependencies]
limine = "0.1.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
x86 = "0.52.0"
log = "0.4.20"

# Kernel
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]