[package]
name = "turo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { version = "0.9.8", default-features = false, features = [
    "spin_mutex"
]}
limine = "0.3.1"
log = "0.4.20"
uart_16550 = "0.3.0"

[dependencies.x86_64]
version = "0.15.2"
features = ["instructions"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]